--- a/WebContent/views/desktop/gestion/evento/ejecucion/evaluarTareas/evaluarTareaEventoPlanificado.zul
+++ b/WebContent/views/desktop/gestion/evento/ejecucion/evaluarTareas/evaluarTareaEventoPlanificado.zul
@@ -1,32 +1,36 @@
 <?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" 
 	signature="java.lang.String convertirLongADate(java.lang.Long)" ?>
+	<?xel-method prefix="m" name="getUrlWeb" class="lights.smile.util.Zki" 
+	signature="java.lang.String getUrlWeb(java.lang.String)" ?>
 <zk xmlns:n="native" xmlns:w="client">
 	<style>
-		.z-datebox input, .z-datebox-input:focus,
-		.z-datebox-input:active{ font-size: 1.2em !important;
-		text-align: center; height: 1.5em !important; border: 1px solid
-		#999999; border-radius: 7px; font-size: 1em !important;
-		text-align: center; margin-top: 4px; width: 93%;}
+		.z-datebox input, .z-datebox input:disabled,
+		.z-datebox-input:focus, .z-datebox-input:active{ font-size:
+		1.2em !important; text-align: center; height: 1.5em !important;
+		border: 1px solid #999999; border-radius: 7px; font-size: 1em
+		!important; text-align: center; width: 93%; background: #f2fca5
+		!important;}
 	</style>
 	<div sclass="animated fadeInLeft">
 	<div sclass="row">
 			<div sclass="col s12">
 				<div class=" col s12">
-					<div class=" row line-evento" style="margin:0px"></div>
-				</div>
-				<div class=" col s12">
-					<div sclass="row"
-						style="margin:0px;background: #FFF">
-
+					<div sclass="row">
 						<div sclass="col s3">
 							<n:br></n:br>
 							<n:br></n:br>
-							<image class="img-responsive center-block"
-								src="/imagenes/portal/icon/icon-bingo.png" width="128px"
-								height="128px">
-							</image>
 							<n:br></n:br>
-						</div>
+								<n:br></n:br>
+								<div align="center"
+									visible="@load(not empty vm.selectedObject.fkMultimedia and not empty vm.selectedObject.fkMultimedia.url)">
+									<image
+										class="img-responsive circle center-block"
+										src="${m:getUrlWeb(vm.selectedObject.fkMultimedia.url)}"
+										width="128px" height="128px">
+									</image>
+								</div>
+								<n:br></n:br>
+							</div>
 						<div sclass="col s9" align="center">
 							<div sclass="col s12" align="center">
 								<label sclass="titulo-evento"
@@ -48,12 +52,26 @@
 										style="padding:0px">
 
 										<label
-											sclass="info-titulo-evento">
-											Fecha:
-										</label>
-										<label
-											sclass="info-descripcion-evento" value="">
-										</label>
+												sclass="info-titulo-evento">
+												Fecha Inicio:
+											</label>
+											<label
+												sclass="info-descripcion-evento"
+												value="${m:convertirLongADate(vm.selectedObject.fechaInicio)}">
+
+											</label>
+											<label
+												sclass="info-descripcion-evento" value="        ">
+											</label>
+											<label
+												sclass="info-titulo-evento">
+												Fecha Fin:
+											</label>
+											<label
+												sclass="info-descripcion-evento"
+												value="${m:convertirLongADate(vm.selectedObject.fechaFin)}">
+
+											</label>
 										<n:br></n:br>
 										<label
 											sclass="info-titulo-evento">
@@ -92,12 +110,8 @@
 						</div>
 					</div>
 				</div>
-				<div class=" col s12">
-					<div class=" row line-evento" style="margin:0px"></div>
-				</div>
 			</div>
-		</div>
-		<separator height="20px"></separator>
+		</div>	<separator height="20px"></separator>
 
 		<div class="row">
 			<div class="col s12" align="center"
@@ -119,7 +133,7 @@
 						<listheader width="19%" label="Ejecutada" />
 						<listheader width="15%" label="Tarea" />
 						<listheader width="19%"
-							label="Fecha Planificada" />
+							label="Fecha Planificada" align="center"/>
 						<listheader width="19%" label="Fecha Ejecución"
 							align="center" />
 						<listheader width="20%" label="Motivo"
@@ -142,9 +156,9 @@
 							<listcell
 								label="@load(each.fkTarea.nombre)">
 							</listcell>
-							<listcell>
+							<listcell style="text-align: center;">
 							
-								<label
+								<label 
 									value="${m:convertirLongADate(each.fechaPlanificada)}">
 								</label>	
 							</listcell>
@@ -164,7 +178,7 @@
 							</listcell>
 							<listcell>
 								<button
-									sclass="teal lighten-1 waves-effect waves-light"
+									sclass="teal lighten-1 waves-effect waves-light" disabled="@bind(each.ejecucion)"
 									onClick="@command('buscarMotivo', index=forEachStatus.index)"
 									iconSclass="fa fa-search" tooltiptext="Editar Lugar"
 									style="/padding: 5px 6px; background-color: #2AA4EF !important; float: right">
