--- a/WebContent/views/desktop/gestion/evento/planificacion/registro/eventoPlanificadoFormBasic.zul
+++ b/WebContent/views/desktop/gestion/evento/planificacion/registro/eventoPlanificadoFormBasic.zul
@@ -1,58 +1,11 @@
 <?component name="uploadImageSingle" macroURI="/assets/theme/components/upload_image_single.zul"?>
 
 <zk xmlns:n="native" xmlns:w="client">
-	<style>
-		.toolbarToSee_ button 
-		{ margin-bottom: 5px; 
-		} .toolbarToSee_
-		.ka-toolbar { 
-		margin-top: 0px !important; max-width: 36px;
-		margin: 0 auto; 
-		} 
-		.estilo-color-selected {
-		-webkit-border-radius: 30px 30px 30px 30px; 
-		border-radius: 30px
-		30px 30px 30px; 
-		height: 25px; 
-		width: 25px; 
-		margin-top: 5px; 
-		}
-		.estilo-preliminar { 
-		border: 2px dashed black;
-		height: 103px;
-		width: 120px !important;
-		}
-		 /* Toolbar de la lista */ 
-		.toolbar-custom-buttons
-		.btn-floating.btn-small { 
-		width: 25px; 
-		height: 25px; 
-		}
-		.toolbar-custom-buttons { 
-		margin: 0px !important; 
-		padding: 0px !important; 
-		text-align: center; 
-		} 
-		.toolbar-custom-buttons button i 
-		{ margin-top: -1em; 
-		} .toolbar-custom-buttons button {
-		font-size: 0em !important; 
-		} 
-		.tree-full-ventanas
-		.z-treecell-content { 
-		min-height: 40px; 
-		line-height: 25px; 
-		}
-	</style>
 	<div sclass="animated fadeInLeft">
-	<div sclass="row">
+		<div sclass="row">
 			<div sclass="col s12">
 				<div class=" col s12">
-					<div class=" row line-evento" style="margin:0px"></div>
-				</div>
-				<div class=" col s12">
-					<div sclass="row"
-						style="margin:0px;background: #FFF">
+					<div sclass="row">
 						<div sclass="col s12" align="center">
 							<div sclass="col s12" align="center">
 								<label sclass="titulo-evento"
@@ -73,24 +26,34 @@
 						</div>
 					</div>
 				</div>
-				<div class=" col s12">
-					<div class=" row line-evento" style="margin:0px"></div>
-				</div>
 			</div>
 		</div>
 		<separator height="20px"></separator>
 		<div class="row">
-			<div class="col s6">			
+			<div class="col s6">
 				<div class="row">
 
 					<div class="input-field col s12">
 						<n:label for="fecha_trabajo_social"
 							class="active">
-							Fecha Planificada:
+							Fecha Inicio:
+						</n:label>
+						<datebox id="fecha_inicio" readonly="true"
+							cols="20" format="dd/MM/yyyy" value="@bind(vm.fechaInicio)" />
+					</div>
+
+				</div>
+
+				<div class="row">
+
+					<div class="input-field col s12">
+						<n:label for="fecha_trabajo_social"
+							class="active">
+							Fecha Fin:
 						</n:label>
 						<datebox id="fecha_evento_planificado"
 							readonly="true" cols="20" format="dd/MM/yyyy"
-							value="@bind(vm.fechaPlanificada)" />
+							value="@bind(vm.fechaFin)" />
 					</div>
 
 				</div>
@@ -101,7 +64,7 @@
 							Lugar:
 						</n:label>
 						<textbox id="lugar" type="text" disabled="true"
-							value="@bind(vm.directorio.direccion)">
+							value="@bind(vm.eventoPlanificado.fkDirectorio.nombre.concat(' - ').concat(vm.eventoPlanificado.fkDirectorio.direccion))">
 						</textbox>
 					</div>
 					<div class="input-field col s1"
@@ -123,7 +86,8 @@
 							Responsable:
 						</n:label>
 						<textbox id="responsable" type="text"
-							disabled="true" value="@bind(vm.eventoPlanificado.fkPersona.nombre)">
+							disabled="true"
+							value="@bind(vm.eventoPlanificado.fkPersona.identificacion.concat(' - ').concat(vm.eventoPlanificado.fkPersona.nombre.concat(' ')).concat(vm.eventoPlanificado.fkPersona.apellido))">
 						</textbox>
 					</div>
 					<div class="input-field col s1"
