--- a/WebContent/views/desktop/gestion/evento/planificacion/tareas/asignacion/editTareaEventoPlanificado.zul
+++ b/WebContent/views/desktop/gestion/evento/planificacion/tareas/asignacion/editTareaEventoPlanificado.zul
@@ -1,30 +1,33 @@
+
 <zk xmlns:n="native" xmlns:w="client">
 	<style>
 		.z-datebox input, .z-datebox-input:focus,
 		.z-datebox-input:active{ font-size: 1.2em !important;
 		text-align: center; height: 1.5em !important; border: 1px solid
 		#999999; border-radius: 7px; font-size: 1em !important;
-		text-align: center; margin-top: 4px; width: 93%;}
+		text-align: center; margin-top: 4px; width: 93%; background:
+		#f2fca5;}
 	</style>
 	<div sclass="animated fadeInLeft">
 <div sclass="row">
 			<div sclass="col s12">
 				<div class=" col s12">
-					<div class=" row line-evento" style="margin:0px"></div>
-				</div>
-				<div class=" col s12">
-					<div sclass="row"
-						style="margin:0px;background: #FFF">
-
+					<div sclass="row">
 						<div sclass="col s3">
 							<n:br></n:br>
 							<n:br></n:br>
-							<image class="img-responsive center-block"
-								src="/imagenes/portal/icon/icon-bingo.png" width="128px"
-								height="128px">
-							</image>
 							<n:br></n:br>
-						</div>
+								<n:br></n:br>
+								<div align="center"
+									visible="@load(not empty vm.selectedObject.fkMultimedia and not empty vm.selectedObject.fkMultimedia.url)">
+									<image
+										class="img-responsive circle center-block"
+										src="${m:getUrlWeb(vm.selectedObject.fkMultimedia.url)}"
+										width="128px" height="128px">
+									</image>
+								</div>
+								<n:br></n:br>
+							</div>
 						<div sclass="col s9" align="center">
 							<div sclass="col s12" align="center">
 								<label sclass="titulo-evento"
@@ -46,12 +49,26 @@
 										style="padding:0px">
 
 										<label
-											sclass="info-titulo-evento">
-											Fecha:
-										</label>
-										<label
-											sclass="info-descripcion-evento" value="">
-										</label>
+												sclass="info-titulo-evento">
+												Fecha Inicio:
+											</label>
+											<label
+												sclass="info-descripcion-evento"
+												value="${m:convertirLongADate(vm.selectedObject.fechaInicio)}">
+
+											</label>
+											<label
+												sclass="info-descripcion-evento" value="        ">
+											</label>
+											<label
+												sclass="info-titulo-evento">
+												Fecha Fin:
+											</label>
+											<label
+												sclass="info-descripcion-evento"
+												value="${m:convertirLongADate(vm.selectedObject.fechaFin)}">
+
+											</label>
 										<n:br></n:br>
 										<label
 											sclass="info-titulo-evento">
@@ -90,9 +107,6 @@
 						</div>
 					</div>
 				</div>
-				<div class=" col s12">
-					<div class=" row line-evento" style="margin:0px"></div>
-				</div>
 			</div>
 		</div>
 		<separator height="20px"></separator>
@@ -113,10 +127,11 @@
 					emptyMessage="No hay tareas asociados al evento."
 					model="@bind(vm.eventoPlanificadotareas)">
 					<listhead sizable="true">
-						<listheader width="25%" label="Tarea" />
-						<listheader width="30%" label="Fecha Planificada" />
-						<listheader width="36%" label="Lugar" align="center" />
-						<listheader width="9%" label="" align="right" />
+						<listheader width="30%" label="Tarea" />
+						<listheader width="20%" label="Fecha Planificada" />
+						<listheader width="40%" label="Lugar" align="center" />
+						<listheader width="5%" label="" align="right" />
+						<listheader width="5%" label="" align="right" />
 					</listhead>
 					<template name="model">
 						<listitem>
@@ -146,7 +161,14 @@
 									style="/padding: 5px 6px; background-color: #2AA4EF !important; float: right">
 								</button>
 								</listcell>
-
+								<listcell>
+								<button
+									sclass="red waves-effect waves-light "
+									onClick="@command('removerDirectorio', index=forEachStatus.index)"
+									iconSclass="fa fa-times" tooltiptext="Remover Lugar"
+									style="padding: 5px 8px;float: right;border: none;">
+								</button>
+							</listcell>
 							
 						</listitem>
 					</template>
