--- a/WebContent/views/desktop/gestion/evento/planificacion/tareas/participantes/tareaParticipantes.zul
+++ b/WebContent/views/desktop/gestion/evento/planificacion/tareas/participantes/tareaParticipantes.zul
@@ -1,90 +1,25 @@
-<?xel-method prefix="m" name="getBufferedImage" class="lights.smile.util.Zki" 
-	signature="java.awt.image.BufferedImage getBufferedImage(java.lang.String)" ?>
-
-<div sclass="row section animated fadeInLeft">
-
-	<style>
-
-		.z-grid-emptybody td { font-family: Roboto; font-size: 13px;
-		font-weight: normal; font-style: normal; color: #aaa;
-		font-style: italic; text-align: center; height: 1px; padding:
-		6px !important; }
-
-		.z-grid .z-column-content { font-family: 'Roboto'; font-size:
-		13px; color: #ffffff; background: #8d7a6f; }
-
-		tr.row-vacaciones { border-bottom: 1px solid #CFCFCF;
-		background: #ffffff; }
-
-
-		.z-row .z-detail-outer { width: 40px; min-width: 40px;
-		border-top: 1px solid #cfcfcf; padding: 18px 6px; line-height:
-		normal; background: transparent !important; vertical-align: top;
-		}
-
-
-		.z-auxhead:hover .z-auxheader-content { background: #EEEEEE
-		!important; }
-
-
-		.z-auxheader-content { background: #EEEEEE !important;
-		border-right: 1px solid #E5F4FB; height: 41px; }
-
-		.z-detail { font-size: 14px; width: 16px; height: 16px; border:
-		none !important; padding: 0; line-height: 14px; background:
-		transparent !important; text-align: center; overflow: hidden;
-		white-space: nowrap; cursor: pointer; }
-
-		.z-columns th:first-child { border-left: none; border-right:
-		none !important; }
-
-		.z-row .z-detail-outer+td, .z-row .z-detail-inner :first-child {
-		border-left: none; }
-
-		tr.header-periodo-disfute { background-color: rgba(192, 192,
-		193, 0.27); }
-
-
-		.z-messagebox .z-label { font-family: 'Roboto'; font-size: 15px
-		!important; color: #363636; }
-
-		.z-cell .vacacion { background-color: #fff !important;
-		border-left: 1px solid #cfcfcf !important; }
-
-		.z-cell .periodo { background-color: #fff !important; }
-
-		.z-grid .vacacion { border: 1px solid rgba(128, 128, 128, 0.33)
-		!important; }
-
-		.z-grid-odd>.z-row-inner, .z-grid-odd>.z-cell { background:
-		#FFFFFF !important; }
-
-		.z-foot .vacacion { background-color: rgb(238, 238, 238)
-		!important; }
-
-		.z-grid.periodo>div.z-grid-body { overflow: auto; max-height:
-		500px !important; }
-
-	</style>
-	<div sclass="col s12">
-	<div sclass="row">
+<?xel-method prefix="m" name="getUrlWeb" class="lights.smile.util.Zki" 
+	signature="java.lang.String getUrlWeb(java.lang.String)" ?>
+<zk xmlns:n="native" xmlns:w="client">
+<div sclass="row">
 			<div sclass="col s12">
 				<div class=" col s12">
-					<div class=" row line-evento" style="margin:0px"></div>
-				</div>
-				<div class=" col s12">
-					<div sclass="row"
-						style="margin:0px;background: #FFF">
-
+					<div sclass="row">
 						<div sclass="col s3">
 							<n:br></n:br>
 							<n:br></n:br>
-							<image class="img-responsive center-block"
-								src="/imagenes/portal/icon/icon-bingo.png" width="128px"
-								height="128px">
-							</image>
 							<n:br></n:br>
-						</div>
+								<n:br></n:br>
+								<div align="center"
+									visible="@load(not empty vm.selectedObject.fkMultimedia and not empty vm.selectedObject.fkMultimedia.url)">
+									<image
+										class="img-responsive circle center-block"
+										src="${m:getUrlWeb(vm.selectedObject.fkMultimedia.url)}"
+										width="128px" height="128px">
+									</image>
+								</div>
+								<n:br></n:br>
+							</div>
 						<div sclass="col s9" align="center">
 							<div sclass="col s12" align="center">
 								<label sclass="titulo-evento"
@@ -106,12 +41,26 @@
 										style="padding:0px">
 
 										<label
-											sclass="info-titulo-evento">
-											Fecha:
-										</label>
-										<label
-											sclass="info-descripcion-evento" value="">
-										</label>
+												sclass="info-titulo-evento">
+												Fecha Inicio:
+											</label>
+											<label
+												sclass="info-descripcion-evento"
+												value="${m:convertirLongADate(vm.selectedObject.fechaInicio)}">
+
+											</label>
+											<label
+												sclass="info-descripcion-evento" value="        ">
+											</label>
+											<label
+												sclass="info-titulo-evento">
+												Fecha Fin:
+											</label>
+											<label
+												sclass="info-descripcion-evento"
+												value="${m:convertirLongADate(vm.selectedObject.fechaFin)}">
+
+											</label>
 										<n:br></n:br>
 										<label
 											sclass="info-titulo-evento">
@@ -150,11 +99,16 @@
 						</div>
 					</div>
 				</div>
-				<div class=" col s12">
-					<div class=" row line-evento" style="margin:0px"></div>
-				</div>
 			</div>
 		</div>
+		<separator height="20px"></separator>
+<div sclass="row section animated fadeInLeft">
+	<style>
+		.z-auxheader-content, .z-auxheader-content:hover { background:
+		#594e46 !important; border-right: none; height: 41px; color:
+		white; }
+	</style>
+	<div sclass="col s12">
 		<separator height="20px"></separator>
 		<tabbox id="tb" class="rtab ltab">
 			<tabs id="tabs">
@@ -263,7 +217,7 @@
 									<button
 										sclass="teal lighten-1 waves-effect waves-light"
 										onClick="@command('buscarVoluntarios', index=statusTarea.index)"
-										iconSclass="fa fa-search" tooltiptext="Editar Lugar"
+										iconSclass="fa fa-plus" tooltiptext="Editar Lugar"
 										style="/padding: 5px 6px; background-color: #2AA4EF !important; float: center">
 									</button>
 								</cell>
@@ -375,7 +329,7 @@
 									<button
 										sclass="teal lighten-1 waves-effect waves-light"
 										onClick="@command('buscarTrabajadores', index=statusTarea.index)"
-										iconSclass="fa fa-search" tooltiptext="Buscar Trabajadores"
+										iconSclass="fa fa-plus" tooltiptext="Buscar Trabajadores"
 										style="/padding: 5px 6px; background-color: #2AA4EF !important; float: center">
 									</button>
 								</cell>
@@ -389,3 +343,4 @@
 	</div>
 
 </div>
+</zk>
