--- a/WebContent/reporte/reportEventosPlanificadosParametrizados.jrxml
+++ b/WebContent/reporte/reportEventosPlanificadosParametrizados.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="reportEventosPlanificadosParametrizados" printOrder="Horizontal" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" scriptletClass="net.sf.jasperreports.engine.JRDefaultScriptlet" uuid="2cc1dfe8-35f4-44cb-b41c-1c58e9d3b41e">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="126"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["C:\\Users\\Soaint\\Desktop\\"]]></defaultValueExpression>
 	</parameter>
@@ -25,12 +25,13 @@
 	<queryString language="SQL">
 		<![CDATA[]]>
 	</queryString>
-	<field name="estatusVoluntario" class="java.lang.Integer"/>
-	<field name="fkPersona.nombre" class="java.lang.String"/>
-	<field name="fkPersona.apellido" class="java.lang.String"/>
-	<field name="fkPersona.identificacion" class="java.lang.String"/>
-	<field name="fkPersona.direccion" class="java.lang.String"/>
-	<field name="fkPersona.telefono1" class="java.lang.String"/>
+	<field name="fkEvento.nombre" class="java.lang.String"/>
+	<field name="fkEvento.descripcion" class="java.lang.String"/>
+	<field name="fkEvento.tipoEvento" class="java.lang.Integer"/>
+	<field name="fkEvento.fkClasificadorEvento.nombre" class="java.lang.String"/>
+	<field name="fkDirectorio.direccion" class="java.lang.String"/>
+	<field name="fechaPlanificada" class="java.lang.Long"/>
+	<field name="estatusEvento" class="java.lang.Integer"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -56,7 +57,7 @@
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="245" splitType="Stretch">
+		<band height="248" splitType="Stretch">
 			<printWhenExpression><![CDATA[$V{PAGE_NUMBER}.intValue() == 1? new Boolean(true) : new Boolean(false)]]></printWhenExpression>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="107" y="32" width="545" height="23" uuid="87c1a97e-0be6-4d70-a5f4-2b1f9868657c"/>
@@ -73,7 +74,7 @@
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText" mode="Opaque" x="242" y="226" width="96" height="19" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="1323a6f7-aa9e-42e1-872f-f4316fef787f"/>
+				<reportElement key="staticText" mode="Opaque" x="242" y="221" width="96" height="19" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="1323a6f7-aa9e-42e1-872f-f4316fef787f"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -86,7 +87,7 @@
 				<text><![CDATA[Tipo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText" mode="Opaque" x="343" y="226" width="130" height="19" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="f3224a8c-3ff0-467d-85b0-3a8faa8321df"/>
+				<reportElement key="staticText" mode="Opaque" x="343" y="221" width="130" height="19" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="f3224a8c-3ff0-467d-85b0-3a8faa8321df"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -183,7 +184,7 @@
 				<textFieldExpression><![CDATA[$P{tEventosClasificados}==""?null : $P{tEventosClasificados}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText" mode="Opaque" x="24" y="226" width="88" height="19" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="fab501d4-9034-413d-9798-995e8e92d43e"/>
+				<reportElement key="staticText" mode="Opaque" x="24" y="221" width="88" height="19" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="fab501d4-9034-413d-9798-995e8e92d43e"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -196,7 +197,7 @@
 				<text><![CDATA[Nombre]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText" mode="Opaque" x="479" y="226" width="100" height="19" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="98e19641-be80-4c66-b3a3-749fdd6dbde7"/>
+				<reportElement key="staticText" mode="Opaque" x="479" y="221" width="100" height="19" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="98e19641-be80-4c66-b3a3-749fdd6dbde7"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -209,7 +210,7 @@
 				<text><![CDATA[Dirección]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText" mode="Opaque" x="117" y="226" width="120" height="19" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="757384e6-e86b-4625-8990-0922fe949380"/>
+				<reportElement key="staticText" mode="Opaque" x="117" y="221" width="120" height="19" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="757384e6-e86b-4625-8990-0922fe949380"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -225,7 +226,7 @@
 				<reportElement x="101" y="57" width="554" height="1" forecolor="#C2D62D" uuid="87419299-5902-4db0-ae8e-b4d123dc1a04"/>
 			</line>
 			<staticText>
-				<reportElement key="staticText" mode="Opaque" x="586" y="226" width="88" height="19" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="396e02de-fc2a-4325-9e66-7511ebd28803"/>
+				<reportElement key="staticText" mode="Opaque" x="586" y="221" width="88" height="19" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="396e02de-fc2a-4325-9e66-7511ebd28803"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -238,7 +239,7 @@
 				<text><![CDATA[Fecha Planificada]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText" mode="Opaque" x="681" y="226" width="88" height="19" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="b0029e17-c006-475c-ab35-e4610e7a5566"/>
+				<reportElement key="staticText" mode="Opaque" x="681" y="221" width="88" height="19" forecolor="#FFFFFF" backcolor="#3B85A1" uuid="b0029e17-c006-475c-ab35-e4610e7a5566"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -254,40 +255,40 @@
 	</columnHeader>
 	<detail>
 		<band height="26">
-			<textField isStretchWithOverflow="true">
-				<reportElement x="131" y="4" width="120" height="20" isPrintWhenDetailOverflows="true" uuid="21e662ed-4d9b-4b6b-841d-666ae23c4098"/>
-				<textElement textAlignment="Center" markup="styled">
-					<font fontName="Arial"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{fkPersona.nombre}+" "+$F{fkPersona.apellido}]]></textFieldExpression>
+			<textField>
+				<reportElement x="23" y="3" width="89" height="20" uuid="276688e5-40fd-4b41-9357-60319805ca94"/>
+				<textElement markup="styled"/>
+				<textFieldExpression><![CDATA[$F{fkEvento.nombre}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
-				<reportElement x="479" y="3" width="100" height="20" isPrintWhenDetailOverflows="true" uuid="a23eaa8c-cc79-4bfd-aeaf-ecc3474d8522"/>
-				<textElement textAlignment="Center" markup="styled">
-					<font fontName="Arial"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{estatusVoluntario}==0 ? "Postulado" : $F{estatusVoluntario} == 1 ? "Por Completar" : $F{estatusVoluntario} == 2 ? "Activo" : $F{estatusVoluntario} == 3 ? "Inactivo" : $F{estatusVoluntario} == 4 ? "Rechazado" : ""]]></textFieldExpression>
+			<textField>
+				<reportElement x="118" y="3" width="119" height="20" uuid="36e96a13-68df-4943-bc34-6f0803639e19"/>
+				<textElement markup="styled"/>
+				<textFieldExpression><![CDATA[$F{fkEvento.descripcion}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
-				<reportElement x="24" y="3" width="88" height="20" isPrintWhenDetailOverflows="true" uuid="5cb31127-9ddf-4bea-bfd2-0e569b6faa3f"/>
-				<textElement textAlignment="Center" markup="styled">
-					<font fontName="Arial"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{fkPersona.identificacion}]]></textFieldExpression>
+			<textField>
+				<reportElement x="240" y="3" width="98" height="20" uuid="85931397-5d84-4769-b2d0-aed35aeb5ad5"/>
+				<textElement markup="styled"/>
+				<textFieldExpression><![CDATA[$F{fkEvento.tipoEvento}==0?"EXTRAORDINARIO":"ANUAL"]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
-				<reportElement x="242" y="3" width="96" height="20" isPrintWhenDetailOverflows="true" uuid="ec528437-eb8a-4d8b-908a-061d71fc50eb"/>
-				<textElement textAlignment="Center" markup="styled">
-					<font fontName="Arial"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{fkPersona.telefono1}]]></textFieldExpression>
+			<textField>
+				<reportElement x="343" y="4" width="130" height="20" uuid="64b12c16-a722-4d94-93d6-87744fc997a0"/>
+				<textElement markup="styled"/>
+				<textFieldExpression><![CDATA[$F{fkEvento.fkClasificadorEvento.nombre}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true">
-				<reportElement x="357" y="4" width="130" height="20" isPrintWhenDetailOverflows="true" uuid="b2f956a5-5dfb-498e-a4c9-f22d0e1773a1"/>
-				<textElement textAlignment="Center" markup="styled">
-					<font fontName="Arial"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{fkPersona.direccion}]]></textFieldExpression>
+			<textField>
+				<reportElement x="480" y="3" width="100" height="20" uuid="127a1fdf-b886-4d5e-99a4-46c28dedd8c6"/>
+				<textElement markup="styled"/>
+				<textFieldExpression><![CDATA[$F{fkDirectorio.direccion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="585" y="4" width="89" height="20" uuid="1b2838d7-55b9-4d3d-af80-c36bc9d779ac"/>
+				<textElement markup="styled"/>
+				<textFieldExpression><![CDATA[new SimpleDateFormat("dd/MM/yyyy").format($F{fechaPlanificada})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="681" y="4" width="100" height="20" uuid="374f8aa1-763d-405b-b740-11420d599990"/>
+				<textElement markup="styled"/>
+				<textFieldExpression><![CDATA[$F{estatusEvento}==0 ? "PLANIFICADO" : $F{estatusEvento}==1 ? "EJECUTADO" : $F{estatusEvento} == 2 ? "POSTULADO": $F{estatusEvento} == 3 ? "RECHAZADO" : "CANCELADO"]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
